@startuml CU6_Gestionar_Clasificacion_Prendas
title CU6 - Gestionar Clasificacion de Prendas (Diagrama de Clases)

skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor White
  BorderColor #444444
  ArrowColor #444444
}

class Categoria {
  +id: int
  +nombre: string
  +descripcion: string
  +activo: bool
  --
  +listar(search, activo)
  +crear()
  +actualizar()
  +bajaLogica()
}

class Temporada {
  +id: int
  +nombre: string
  +descripcion: string
  +fechaInicio: date
  +fechaFin: date
  +activo: bool
  --
  +listar(search, activo)
  +crear()
  +actualizar()
  +bajaLogica()
}

class Coleccion {
  +id: int
  +nombre: string
  +descripcion: string
  +imagenUrl: string
  +activo: bool
  +temporadaId: int
  --
  +listar(search, activo)
  +crear()
  +actualizar()
  +bajaLogica()
}

class Producto <<externa (CU5)>> #F5F5F5 {
  +id: int
  +categoriaId: int
}

Temporada "1" -- "0..*" Coleccion : agrupa >
Categoria "1" -- "0..*" Producto : clasifica >

@enduml
